# Retail-SmartOps

./: .gitignore  README.md
retail-smartops-backend/: Cargo.toml  User Access Management Design.md
retail-smartops-backend/migrations/: 20240924062929_user_management_schema.down.sql  20240924062929_user_management_schema.up.sql
retail-smartops-backend/src/: lib.rs  main.rs
retail-smartops-backend/src/config/: mod.rs
retail-smartops-backend/src/db/: mod.rs
retail-smartops-backend/src/entities/: mod.rs  permission.rs  role.rs  role_permission.rs  store.rs  store_users.rs  user.rs  user_hierarchy.rs  user_role.rs
retail-smartops-backend/src/errors/: mod.rs
retail-smartops-backend/src/handlers/: health.rs
retail-smartops-backend/src/models/: role.rs  user.rs  user_role.rs
retail-smartops-backend/src/repositories/: mod.rs  role.rs  user.rs  user_role.rs
retail-smartops-backend/src/routes/: health.rs  mod.rs
retail-smartops-backend/src/services/: mod.rs  user_access_management_service.rs
