[package]
name = "retail-smartops-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = "0.7.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["mysql", "chrono", "runtime-tokio"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
