[package]
name = "retail-smartops-backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "retail-smartops-backend"
path = "src/main.rs"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.7.6", features = ["tracing"] }
dotenvy = "0.15.7"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["postgres", "chrono", "uuid", "runtime-tokio"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

[dependencies.chrono]
version = "0.4.38"
features = ["serde"]

[dependencies.uuid]
version = "1.10.0"
features = ["serde", "v4"]

[dev-dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
